# graph-lib

./: .gitignore  NOTES.md  README.md  __init__.py  manifest.yaml  pyproject.toml  repo_meta.json  test_gpu_live.py  test_graph.py  test_labels_demo.py  test_ping_graph.py  theme.py  trait_published.yaml
providers/: __init__.py  sqlite_provider.py
renderers/: __init__.py  base.py  gauge.py  line_chart.py
src/graph_lib/: __init__.py  test_gpu_live.py  test_graph.py  test_labels_demo.py  test_ping_graph.py  theme.py
src/graph_lib/providers/: __init__.py  base.py  command_provider.py  gpu_provider.py  sqlite_provider.py  static_provider.py
src/graph_lib/widgets/: graph_widget.py
widgets/: __init__.py  graph_widget.py
